[Merge M77] [NTP] Fix voice search dialog background in dark mode
CSS variables cannot be used in pseudo elements.

(cherry picked from commit 38b248077e3967633cfe42587a8782979a560964 [formerly fea1b4853032c6dd61667b642b2f678fd93addd5])

Bug: 995664
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1762577
Commit-Queue: Kristi Park <kristipark@chromium.org>
Commit-Queue: Kyle Milka <kmilka@chromium.org>
Auto-Submit: Kristi Park <kristipark@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#688702}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1766190
Cr-Commit-Position: refs/branch-heads/3865@{#547}
Cr-Branched-From: 4e0147fd4ab868c78ff6bb1ef42f86871cde1461 [formerly 0cdcc6158160790658d1f033d3db873603250124]-refs/heads/master@{#681094}

Former-commit-id: d528c2753593f420f3a9870a3d3ccf0d53e40ddc

--- a/chrome/browser/resources/local_ntp/voice.css
+++ b/chrome/browser/resources/local_ntp/voice.css
@@ -57,7 +57,9 @@
 
 @media (prefers-color-scheme: dark) {
   .overlay-dialog::backdrop {
-    background-color: rgb(var(--dark-mode-dialog-rgb));
+    /* Equivalent to --dark-mode-dialog-rgb. CSS variables cannot be used in
+     * pseudo elements. */
+    background-color: rgb(41, 42, 45);
   }
 }
 
